[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/img/31e3517cc9d5dec.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/Item_shop.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scripts/UI.gd" type="Script" id=3]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 82.0
margin_top = 8.0
margin_right = -78.0
margin_bottom = -13.0
color = Color( 0.388235, 0.156863, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 86.0
margin_top = 11.0
margin_right = 430.0
margin_bottom = 283.0
color = Color( 0.85098, 0.615686, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -205.0
margin_right = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" parent="vbox" instance=ExtResource( 2 )]
margin_right = 304.0
margin_bottom = 30.0
size_flags_vertical = 0
nom = "Snack"
prix = "500"

[node name="HSeparator" type="HSeparator" parent="vbox"]
margin_top = 34.0
margin_right = 304.0
margin_bottom = 38.0

[node name="HBoxContainer2" parent="vbox" instance=ExtResource( 2 )]
margin_top = 42.0
margin_right = 304.0
margin_bottom = 72.0
size_flags_vertical = 0
nom = "Carte cadeau"
prix = "4000"

[node name="HSeparator2" type="HSeparator" parent="vbox"]
margin_top = 76.0
margin_right = 304.0
margin_bottom = 80.0

[node name="HBoxContainer3" parent="vbox" instance=ExtResource( 2 )]
margin_top = 84.0
margin_right = 304.0
margin_bottom = 114.0
size_flags_vertical = 0
nom = "Potion d'XP"
prix = "2000"

[node name="HSeparator3" type="HSeparator" parent="vbox"]
margin_top = 118.0
margin_right = 304.0
margin_bottom = 122.0

[node name="HBoxContainer4" parent="vbox" instance=ExtResource( 2 )]
margin_top = 126.0
margin_right = 304.0
margin_bottom = 156.0
size_flags_vertical = 0
nom = "Potion de vie"
prix = "300"

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -165.0
margin_top = 38.0
margin_right = 455.0
margin_bottom = 298.0
rect_min_size = Vector2( 100, 100 )
rect_scale = Vector2( 0.1, 0.1 )
size_flags_horizontal = 12
size_flags_vertical = 12
texture_normal = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_buy" from="vbox/HBoxContainer" to="." method="_on_HBoxContainer_item_buy"]
[connection signal="item_buy" from="vbox/HBoxContainer2" to="." method="_on_HBoxContainer2_item_buy"]
[connection signal="item_buy" from="vbox/HBoxContainer3" to="." method="_on_HBoxContainer3_item_buy"]
[connection signal="item_buy" from="vbox/HBoxContainer4" to="." method="_on_HBoxContainer4_item_buy"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
